# read_barco_numbers

./: .gitignore  Cargo.toml
src/: main.rs
ui/: main.slint
